--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "schema": "openapi-typescript ./src/schema/swagger_doc.json -o ./src/schema/schema.d.ts"
   },
   "dependencies": {
     "axios": "^1.6.8",
