--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.4",
+    "openapi-fetch": "^0.9.3",
     "openapi-typescript": "~5.4.2",
     "typescript": "^5.2.2",
     "vite": "^5.2.0",
