--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "vue": "^3.4.21"
   },
   "devDependencies": {
+    "@types/node": "^20.12.3",
     "@vitejs/plugin-vue": "^5.0.4",
     "openapi-fetch": "^0.9.3",
     "openapi-typescript": "~5.4.2",
