--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vue-tsc && vite build",
     "preview": "vite preview",
-    "schema": "openapi-typescript ./src/schema/swagger_doc.json -o ./src/schema/schema.d.ts"
+    "schema": "openapi-typescript ./src/schema/clm_swagger_doc.json -o ./src/schema/schema.d.ts",
+    "clm-schema": "openapi-typescript ./src/schema/clm_swagger_doc.json -o ./src/schema/schema.d.ts"
   },
   "dependencies": {
     "axios": "^1.6.8",
