--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "dev": "vite",
     "build": "vue-tsc && vite build",
     "preview": "vite preview",
-    "schema": "openapi-typescript ./src/schema/org_swagger.json -o ./src/schema/org_schema.d.ts",
-    "schema-clm": "openapi-typescript ./src/schema/clm_swagger.json -o ./src/schema/clm_schema.d.ts"
+    "s2o": "swagger2openapi ./src/schema/swagger.json -o ./src/schema/openapi.json",
+    "schema": "npm run s2o && openapi-typescript ./src/schema/openapi.json -o ./src/schema/schema.d.ts"
   },
   "dependencies": {
     "axios": "^1.6.8",
@@ -19,6 +19,7 @@
     "@vitejs/plugin-vue": "^5.0.4",
     "openapi-fetch": "^0.9.3",
     "openapi-typescript": "~5.4.2",
+    "swagger2openapi": "^7.0.8",
     "typescript": "^5.2.2",
     "vite": "^5.2.0",
     "vue-tsc": "^2.0.6"
