--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "s2o": "swagger2openapi ./src/schema/swagger.json -o ./src/schema/openapi.json",
     "schema": "npm run s2o && openapi-typescript ./src/schema/openapi.json -o ./src/schema/schema.d.ts",
     "s2o-remote": "swagger2openapi http://localhost:3001/swagger.json -o ./src/schema/openapi.json",
-    "schema-remote": "npm run s20-remote && openapi-typescript http://localhost:3001/swagger.json -o ./src/schema/schema.d.ts"
+    "schema-remote": "npm run s2o-remote && openapi-typescript http://localhost:3001/swagger.json -o ./src/schema/schema.d.ts"
   },
   "dependencies": {
     "axios": "^1.6.8",
