--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@vitejs/plugin-vue": "^5.0.4",
     "openapi-fetch": "^0.9.3",
     "openapi-typescript": "~5.4.2",
+    "openapi-typescript-codegen": "^0.29.0",
     "openapi-typescript-fetch": "^2.0.0",
     "swagger2openapi": "^7.0.8",
     "typescript": "^5.2.2",
