--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
     "build": "vue-tsc && vite build",
     "preview": "vite preview",
     "s2o": "swagger2openapi ./src/schema/swagger.json -o ./src/schema/openapi.json",
-    "schema": "npm run s2o && openapi-typescript ./src/schema/openapi.json -o ./src/schema/schema.d.ts",
     "s2o-remote": "swagger2openapi http://localhost:3001/swagger.json -o ./src/schema/openapi.json",
-    "schema-remote": "npm run s2o-remote && openapi-typescript ./src/schema/openapi.json -o ./src/schema/openapi-typescript/schema.d.ts"
+    "schema": "npm run s2o && openapi-typescript ./src/schema/openapi.json -o ./src/schema/schema.d.ts",
+    "schema-remote": "npm run s2o-remote && openapi-typescript ./src/schema/openapi.json -o ./src/schema/openapi-typescript/schema.d.ts",
+    "schema-codegen": "npx openapi --input ./src/schema/openapi.json --output ./src/schema/openapi-typescript-codegen/schema.d.ts"
   },
   "dependencies": {
     "axios": "^1.6.8",
