--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "preview": "vite preview",
     "swagger2openapi": "swagger2openapi ./src/schema/swagger.json -o ./src/schema/openapi.json",
     "swagger2openapi-remote": "swagger2openapi http://localhost:3001/swagger.json -o ./src/schema/openapi.json",
-    "openapi2schema": "openapi-typescript ./src/schema/openapiCamel.json -o ./src/schema/openapi-typescript/schema.d.ts",
-    "schema-codegen": "openapi-typescript-codegen --input ./src/schema/openapi.json --output ./src/schema/openapi-typescript-codegen",
-    "openapi2camel": "ts-node --esm ./src/api/openapi-typescript/openapiCamelize.ts",
-    "schema": "npm run swagger2openapi-remote && npm run openapi2camel && npm run openapi2schema"
+    "openapi2schema": "openapi-typescript ./src/schema/openapi.json -o ./src/schema/openapi-typescript/schema.d.ts",
+    "openapiCamel2schema": "openapi-typescript ./src/schema/openapiCamel.json -o ./src/schema/openapi-typescript/schema.d.ts",
+    "openapi2camel": "ts-node --esm ./src/lib/openapiCamelize.ts",
+    "schema": "npm run swagger2openapi-remote && npm run openapi2schema",
+    "schema-codegen": "openapi-typescript-codegen --input ./src/schema/openapi.json --output ./src/schema/openapi-typescript-codegen"
   },
   "dependencies": {
     "axios": "^1.6.8",
