--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "openapiCamel2schema": "openapi-typescript ./src/schema/openapiCamel.json -o ./src/schema/openapi-typescript/schema.d.ts",
     "openapi2camel": "ts-node --esm ./src/lib/openapiCamelize.ts",
     "schema": "npm run swagger2openapi-remote && npm run openapi2schema",
-    "schema-codegen": "openapi-typescript-codegen --input ./src/schema/openapi.json --output ./src/schema/openapi-typescript-codegen"
+    "schema-codegen": "openapi-typescript-codegen --input ./src/schema/openapi.json --output ./src/schema/openapi-typescript-codegen",
+    "schema-sta": "sta -p ./src/schema/openapi.json -o ./src/schema/swagger-typescript-api --axios"
   },
   "dependencies": {
     "axios": "^1.6.8",
