--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@types/node": "^20.12.3",
     "@vitejs/plugin-vue": "^5.0.4",
     "openapi-fetch": "^0.9.3",
-    "openapi-typescript": "~5.4.2",
+    "openapi-typescript": "^6.7.5",
     "openapi-typescript-codegen": "^0.29.0",
     "openapi-typescript-fetch": "^2.0.0",
     "swagger-typescript-api": "^13.0.3",
